valores cercanos mas pequeños

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -5,3 +5,17 @@
 /Controlador$1.class
 /PanelDibujo.class
 /Vista$1.class
+/ControladorEscenario1$1.class
+/ControladorEscenario1.class
+/ControladorEscenario3$1.class
+/ControladorEscenario3.class
+/ModeloEscenario1.class
+/ModeloEscenario3.class
+/PanelDibujoEscenario1.class
+/PanelDibujoEscenario3.class
+/TestEscenario1.class
+/TestEscenario3.class
+/VistaEscenario1$1.class
+/VistaEscenario1.class
+/VistaEscenario3$1.class
+/VistaEscenario3.class
